--- a/compiled/about/index.html
+++ b/compiled/about/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>About Myself</title>
-    <meta name="description" content="who is ?">
+    <title>About Me</title>
+    <meta name="description" content="who">
     <meta name="author" content="Firstname Lastname">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -12,9 +12,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.863638129390041" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/stylesheets/style.css?0.31664649844678616" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.6026831700675227" type="text/css" rel="stylesheet" media="all">
+    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.7113216173957565" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/stylesheets/style.css?0.9656974145648664" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.07576571705126978" type="text/css" rel="stylesheet" media="all">
 
  
 
@@ -42,7 +42,7 @@
                 <li><a href="/categories">Categories</a></li>
               
                 <li><a href="/pages">Pages</a></li>
-                <li class="active"><a href="/about" class="active">About Myself</a></li>
+                <li class="active"><a href="/about" class="active">About Me</a></li>
               
           </ul>
         </div>
@@ -53,14 +53,12 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>About Myself </h1>
+  <h1>About Me </h1>
 </div>
 
 <div class="row">
   <div class="span12">
-    <p>Nothing happens.
-Wow
-3rd change</p>
+    <p>Hello World!</p>
 
   </div>
 </div>
