--- a/compiled/index.html
+++ b/compiled/index.html
@@ -11,9 +11,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.6382083116066609" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/stylesheets/style.css?0.7986223078785564" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.1551372135990453" type="text/css" rel="stylesheet" media="all">
+    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.4865014197651627" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/stylesheets/style.css?0.7716736846001228" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.836005394522625" type="text/css" rel="stylesheet" media="all">
 
  
 
@@ -42,7 +42,7 @@
               
                 <li><a href="/pages">Pages</a></li>
               
-                <li><a href="/about">About Myself</a></li>
+                <li><a href="/about">About Me</a></li>
           </ul>
         </div>
       </div>
