--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -11,9 +11,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.9548494383807" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/stylesheets/style.css?0.4583478553382627" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.02595404388810063" type="text/css" rel="stylesheet" media="all">
+    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.030311686094742885" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/stylesheets/style.css?0.5241959423225442" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.5118517683998316" type="text/css" rel="stylesheet" media="all">
 
  
 
@@ -42,7 +42,7 @@
                 <li class="active"><a href="/pages" class="active">Pages</a></li>
               
               
-                <li><a href="/about">About Myself</a></li>
+                <li><a href="/about">About Me</a></li>
           </ul>
         </div>
       </div>
@@ -59,7 +59,7 @@
   <div class="span12">
     <ul>
   
-    <li><a href="/about">About Myself</a></li>
+    <li><a href="/about">About Me</a></li>
   
     <li><a href="/archive">Archive</a></li>
   
