--- a/compiled/hello-wa/index.html
+++ b/compiled/hello-wa/index.html
@@ -11,9 +11,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.2999298223240564" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/stylesheets/style.css?0.7453122337612328" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.8969556560664717" type="text/css" rel="stylesheet" media="all">
+    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.9195399758465042" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/stylesheets/style.css?0.4251862185151073" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.7599281361362492" type="text/css" rel="stylesheet" media="all">
 
  
 
@@ -42,7 +42,7 @@
               
                 <li><a href="/pages">Pages</a></li>
               
-                <li><a href="/about">About Myself</a></li>
+                <li><a href="/about">About Me</a></li>
           </ul>
         </div>
       </div>
