--- a/compiled/about/index.html
+++ b/compiled/about/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>About Me</title>
     <meta name="description" content="who">
-    <meta name="author" content="Firstname Lastname">
+    <meta name="author" content="Charles Gao">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -12,9 +12,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.7113216173957565" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/stylesheets/style.css?0.9656974145648664" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.07576571705126978" type="text/css" rel="stylesheet" media="all">
+    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.153239366239599" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/stylesheets/style.css?0.033379891689375385" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.07630085236137307" type="text/css" rel="stylesheet" media="all">
 
  
 
@@ -32,7 +32,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/">Blog Title</a>
+          <a class="brand" href="/">Bottom Coder</a>
           <ul class="nav">
               
                 <li><a href="/archive">Archive</a></li>
@@ -66,7 +66,7 @@
       </div>
 
       <footer>
-        <p>&copy; Firstname Lastname 2012 
+        <p>&copy; Charles Gao 2012 
           with help from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
