--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Pages</title>
-    <meta name="author" content="Firstname Lastname">
+    <meta name="author" content="Charles Gao">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -11,9 +11,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.030311686094742885" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/stylesheets/style.css?0.5241959423225442" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.5118517683998316" type="text/css" rel="stylesheet" media="all">
+    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.6458216785139045" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/stylesheets/style.css?0.08976936583489903" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.7526218953830144" type="text/css" rel="stylesheet" media="all">
 
  
 
@@ -31,7 +31,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/">Blog Title</a>
+          <a class="brand" href="/">Bottom Coder</a>
           <ul class="nav">
               
                 <li><a href="/archive">Archive</a></li>
@@ -77,7 +77,7 @@
       </div>
 
       <footer>
-        <p>&copy; Firstname Lastname 2012 
+        <p>&copy; Charles Gao 2012 
           with help from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
