--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -11,9 +11,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.6458216785139045" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/stylesheets/style.css?0.08976936583489903" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.7526218953830144" type="text/css" rel="stylesheet" media="all">
+    <link href="/assets/twitter/stylesheets/bootstrap.min.css?0.3921604812685747" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/stylesheets/style.css?0.6358138215608289" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.8207664253699422" type="text/css" rel="stylesheet" media="all">
 
  
 
@@ -31,7 +31,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="/">Bottom Coder</a>
+          <a class="brand" href="/">Shitty Coder</a>
           <ul class="nav">
               
                 <li><a href="/archive">Archive</a></li>
@@ -71,6 +71,7 @@
   
     <li><a href="/tags">Tags</a></li>
 </ul>
+
   </div>
 </div>
 
