fixed tags anchor

--- a/pages/tags.html
+++ b/pages/tags.html
@@ -4,13 +4,13 @@ description: Tags
 
 <div class="tags-tags">
 {{# tags }}
-  <a id="{{ name }}" href="{{url}}">{{name}}</a>
+  <a id="{{ name }}" href="#{{ name }}-ref">{{name}}</a>
 {{/ tags }}
 </div>
 
 <div class="tags-posts">
 {{# tags }}
-  <h3 id="{{name}}-ref">{{ name }}</h3>
+  <h3 id="{{ name }}-ref">{{ name }}</h3>
   {{# posts?to_posts }}
     <li><a href="{{url}}">{{title}}</a></li>
   {{/ posts?to_posts }}
