modified the first post

--- a/compiled/index.html
+++ b/compiled/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Shitty Blog</title>
-  <link href="/assets/charlesgao/stylesheets/style.css?0.8002573311265383" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/charlesgao/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.3142681520142193" type="text/css" rel="stylesheet" media="all">
+  <link href="/assets/charlesgao/stylesheets/style.css?0.14230392237417266" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/charlesgao/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.45894643133164725" type="text/css" rel="stylesheet" media="all">
 
 
   <script>
@@ -48,7 +48,7 @@
 <p>In <em>Year One</em> Philip introduces the mechanism behind the publication of CS papers:</p>
 
 <blockquote>
-<p>Before I continue my story, I want to briefly introduce how academic papers are peer-reviewed and published. In computer science, the most prestigious venues for publishing papers are conferences. Note that in many other academic disciplines, journals are the most prestigious venues, and the word “conference” means something quite different. The computer science conference publication process works roughly as follows:</p>
+<p>Before I continue my story, I want to briefly introduce how academic papers are peer-reviewed and published. In computer science, the most prestigious venues for publishing papers are conferences. Note that in many other academic disciplines, journals are the most prestigious venues, and the word <code>conference</code> means something quite different. The computer science conference publication process works roughly as follows:</p>
 
 <ol>
 <li><p>Each conference issues a call for papers with a list of topics of interest and a specific submission deadline.</p></li>
@@ -59,13 +59,13 @@
 <li><p>Authors of accepted papers attend the conference to give a 30-minute talk on their paper. All accepted papers are then archived online in a digital library.</p></li>
 </ol>
 
-<p>A prestigious top-tier conference accepts 8 to 16 percent of submitted papers, and a second-tier conference accepts 20 to 30 percent. Due to these relatively low acceptance rates, it&#39;s not uncommon for a paper to be rejected, revised, and resubmitted several times before being accepted for publication—a process that might take several years. (A paper can be submitted to only one conference at a time.)</p>
+<p>A prestigious top-tier conference accepts 8 to 16 percent of submitted papers, and a second-tier conference accepts 20 to 30 percent. Due to these relatively low acceptance rates, it&#39;s not uncommon for a paper to be rejected, revised, and resubmitted several times before being accepted for publication - a process that might take several years. (A paper can be submitted to only one conference at a time.)</p>
 </blockquote>
 
 <p>Therefore it is extremely competitive to publish a top-tier conference paper. However, there are ways to improve the chance as Philip unveils the following facts:</p>
 
 <blockquote>
-<p>Since conferences usually accept less than 20 percent of paper submissions, if reviewers get a bad first impression when reading a paper, then they are likely to reject it. Dawson and I were not specialists in the empirical software measurement subfield, so we weren&#39;t able to “pitch” our paper submissions in a way that appealed to reviewers&#39; expectations.</p>
+<p>Since conferences usually accept less than 20 percent of paper submissions, if reviewers get a bad first impression when reading a paper, then they are likely to reject it. Dawson and I were not specialists in the empirical software measurement subfield, so we weren&#39;t able to <code>pitch</code> our paper submissions in a way that appealed to reviewers&#39; expectations.</p>
 
 <p>...</p>
 
