--- a/compiled/index.html
+++ b/compiled/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Shitty Blog</title>
-  <link href="/assets/charlesgao/stylesheets/style.css?0.2810723623057687" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/charlesgao/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.16878252816567219" type="text/css" rel="stylesheet" media="all">
+  <link href="/assets/charlesgao/stylesheets/style.css?0.21250110491846275" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/charlesgao/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.9803658796429061" type="text/css" rel="stylesheet" media="all">
 
 
   <script>
@@ -52,6 +52,9 @@ Deadline: 3/15/2013</p>
 
 <p><a href="http://www.wikicfp.com/cfp/servlet/event.showcfp?eventid=21361&amp;copyownerid=1">Neural Information Processing Systems Conference 2013</a>
 Deadline: 4/15/2013</p>
+
+<p><a href="http://www.wikicfp.com/cfp/servlet/event.showcfp?eventid=28382&amp;copyownerid=46723">IEEE International Conference on Control, Automation, Robotics and Embedded systems</a>
+Deadline: 7/13/2013</p>
 
 <p><a href="http://web.utk.edu/%7Ejtan10/icra2014">International Conference on Robotics and Automation 2014</a>
 Deadline: 8/15/2013</p>
