--- a/compiled/index.html
+++ b/compiled/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Shitty Blog</title>
-  <link href="/assets/charlesgao/stylesheets/style.css?0.07427502535690134" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/charlesgao/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.7600907907065645" type="text/css" rel="stylesheet" media="all">
+  <link href="/assets/charlesgao/stylesheets/style.css?0.24345960841181447" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/charlesgao/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.8690226741631268" type="text/css" rel="stylesheet" media="all">
 
 
   <script>
@@ -33,8 +33,8 @@
 <body onLoad="init();">
 
     <div class="blog-title">
-      <h1><a href="/">SHITTY BLOG</a></h1>
-      <h3>Yet another blog of Charles Gao.</h3>
+      <h1><a href="/">Math, CS and fun</a></h1>
+      <h3>Yet another blog of Yuan Gao.</h3>
     </div>
 
     <div class="content">
