--- a/compiled/index.html
+++ b/compiled/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Shitty Blog</title>
-  <link href="/assets/charlesgao/stylesheets/style.css?0.24345960841181447" type="text/css" rel="stylesheet" media="all">
-<link href="/assets/charlesgao/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.8690226741631268" type="text/css" rel="stylesheet" media="all">
+  <title>Math, CS and Fun</title>
+  <link href="/assets/charlesgao/stylesheets/style.css?0.01929161336921026" type="text/css" rel="stylesheet" media="all">
+<link href="/assets/charlesgao/widgets/google_prettify/stylesheets/twitter-bootstrap.css?0.06419903784517589" type="text/css" rel="stylesheet" media="all">
 
 
   <script>
@@ -33,7 +33,7 @@
 <body onLoad="init();">
 
     <div class="blog-title">
-      <h1><a href="/">Math, CS and fun</a></h1>
+      <h1><a href="/">Math, CS and Fun</a></h1>
       <h3>Yet another blog of Yuan Gao.</h3>
     </div>
 
